<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseYourAccount"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/welcome_to_the_transport_app"
        android:textSize="24sp"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"
        />

    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:mtf_labelColor="#ffff"
        android:layout_marginTop="35dp"
        android:layout_gravity="center_horizontal"
        app:mtf_image="@drawable/ic_email">

        <EditText
            android:id="@+id/regemail"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:hint="@string/email"
            android:digits=".-_ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@"
            android:inputType="textEmailAddress|textWebEmailAddress"
            android:maxLines="1"/>

    </com.github.florent37.materialtextfield.MaterialTextField>

    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:mtf_labelColor="#ffff"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        app:mtf_image="@drawable/ic_pass">

        <EditText
            android:id="@+id/regpassword"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:digits="._ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@#$&amp;"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>

    </com.github.florent37.materialtextfield.MaterialTextField>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="#ffff"
        android:id="@+id/showPass"
        android:layout_marginStart="15dp"
        android:text="@string/show_password"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp">

        <Button
            android:id="@+id/regCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="regCustomer"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp"
            style="@style/Widget.AppCompat.Button"
            android:textColor="@color/colorPrimary"
            tools:backgroundTint="#ffffff"
            android:text="@string/i_m_customer" />

        <Button
            android:id="@+id/regTransporter"
            android:onClick="regTransporter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="#ffffff"
            tools:backgroundTint="@color/colorAccent"
            android:text="@string/i_m_transporter" />


    </LinearLayout>

</LinearLayout>