<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="106dp"
        android:text="@string/welcome_to_the_transport_app"
        android:textSize="24sp"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_language"
        android:layout_marginTop="100dp"
        android:textSize="24sp"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp">

        <Button
            android:id="@+id/hindi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="#ffffff"
            android:layout_margin="10dp"
            tools:backgroundTint="@color/colorAccent"
            android:text="@string/hindi" />

        <Button
            android:id="@+id/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp"
            style="@style/Widget.AppCompat.Button"
            android:textColor="@color/colorPrimary"
            tools:backgroundTint="#ffffff"
            android:text="@string/english" />

    </LinearLayout>

</LinearLayout>